Tweak Dockerfiles for efficiency and add Makefiles

--- a/cuda11.8.0-ubuntu22.04-oneclick-rp/Dockerfile
+++ b/cuda11.8.0-ubuntu22.04-oneclick-rp/Dockerfile
@@ -3,9 +3,16 @@ ARG CUDNN_VERSION="8"
 ARG UBUNTU_VERSION="22.04"
 
 # Base image
-FROM thebloke/cuda$CUDA_VERSION-ubuntu$UBUNTU_VERSION-oneclick:latest as base
+FROM chrisoei/cuda$CUDA_VERSION-ubuntu$UBUNTU_VERSION-oneclick:latest as base
 
-RUN pip3 install runpod requests
+RUN \
+    --mount=type=cache,target=/root/.cache,sharing=locked \
+    --mount=type=cache,target=/var/cache/apt,sharing=locked \
+    --mount=type=cache,target=/var/cache/mirror,sharing=locked \
+    --mount=type=cache,target=/var/lib/apt,sharing=locked \
+    <<EOF
+pip3 install runpod requests
+EOF
 
 COPY scripts/rp_handler.py /root/scripts
 
