Add perl DateTime from CPAN, etc.

--- a/cuda11.8.0-ubuntu22.04-oneclick/conf-files/tmux.conf
+++ b/cuda11.8.0-ubuntu22.04-oneclick/conf-files/tmux.conf
@@ -8,4 +8,6 @@ set -g prefix C-k
 unbind C-b
 bind C-k send-prefix
 
+set-buffer -b d '/usr/bin/python3 download-model.py "${sS[0]}"'
+set-buffer -b s '. /etc/stringstack.sh'
 set-buffer -b t '/usr/bin/tmux source ~/.tmux.conf'
